tests/NormalTests/paczka1/small_fuzzy/97839779.err
Error in line 4: S954 A124 94,2
Error in line 5: S954 S120 55,3
Error in line 11: ldTeUn A59 -3,2
